<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".Sing_in">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="501dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_amazon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="389dp"
        android:layout_height="440dp"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="425dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Bienvenido"
                android:textColor="#000000"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="Inicia sesion"
                android:textColor="#000000"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="9dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_style"
                android:ems="10"
                android:gravity="center"
                android:hint="Correo Electronico"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                android:textColorHint="#5C5252"


                android:textSize="25dp" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_style"
                android:ems="10"
                android:gravity="center"
                android:hint="Contraseña "
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#5C5252"
                android:textSize="25dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="349dp"
                android:layout_height="63dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/primaryColor"
                android:text="Continuar"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/link_2"
                android:textColor="#000000"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="23dp"
                android:text="@string/link_3"
                android:textSize="18dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="402dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="23dp"
            android:layout_weight="1"
            android:text="@string/link_5"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="23dp"
            android:text="@string/link_4"
            android:textSize="18dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_6"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>